Fixed: Placeholder text no longer becomes hidden when block is blurred

--- a/src/block/number-box/editor.scss
+++ b/src/block/number-box/editor.scss
@@ -15,13 +15,13 @@
 
 [data-type="ugb/number-box"] {
 	// Fade out placeholder text.
-	[data-is-placeholder-visible="true"] + .editor-rich-text__tinymce {
+	[data-is-placeholder-visible="true"] + .editor-rich-text__editable {
 		opacity: 0.5;
 	}
 
 	// Only show placeholder text while selected or typing.
 	&:not(.is-selected):not(.is-typing) {
-		[data-is-placeholder-visible="true"] + .editor-rich-text__tinymce {
+		[data-is-placeholder-visible="true"] + .editor-rich-text__editable {
 			display: none;
 		}
 		[data-is-placeholder-visible="true"] {
