--- a/src/components/button-edit/editor.scss
+++ b/src/components/button-edit/editor.scss
@@ -1,4 +1,4 @@
 // Editing plain buttons show a box. Remove it!
-.ugb-button .editor-rich-text__tinymce.mce-content-body {
+.ugb-button .editor-rich-text__editable.mce-content-body {
 	box-shadow: none;
 }
